--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,12 @@ apps/shopcart/__pycache__/
 apps/shopcart/migrations/__pycache__/
 apps/utils/__pycache__/
 
+xadmin.zip
+apps/captcha01/__init__.py
+apps/captcha01/admin.py
+apps/captcha01/apps.py
+apps/captcha01/models.py
+apps/captcha01/teamplates/
+apps/captcha01/tests.py
+apps/captcha01/urls.py
+apps/captcha01/views.py
