--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,9 @@ kombu==4.3.0
 odfpy==1.4.0
 openpyxl==2.6.0
 Pillow==5.4.1
+pycryptodomex==3.7.2
 PyMySQL==0.9.3
+python-alipay-sdk==1.9.1
 pytz==2018.9
 PyYAML==3.13
 six==1.12.0
