--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ amqp==2.4.1
 billiard==3.5.0.5
 captcha==0.3
 celery==4.2.1
+certifi==2018.11.29
+chardet==3.0.4
 defusedxml==0.5.0
 diff-match-patch==20181111
 Django==1.11.12
@@ -12,9 +14,11 @@ django-import-export==1.2.0
 django-ranged-response==0.2.0
 django-reversion==3.0.3
 django-simple-captcha==0.5.10
+djangoajax==3.1
 et-xmlfile==1.0.1
 future==0.17.1
 httplib2==0.9.2
+idna==2.8
 itsdangerous==1.1.0
 jdcal==1.4
 jieba==0.39
@@ -27,10 +31,13 @@ PyMySQL==0.9.3
 python-alipay-sdk==1.9.1
 pytz==2018.9
 PyYAML==3.13
+requests==2.21.0
 six==1.12.0
 tablib==0.12.1
 unicodecsv==0.14.1
+urllib3==1.24.1
 vine==1.2.0
 Whoosh==2.7.4
+xadmin==0.6.1
 xlrd==1.2.0
 xlwt==1.3.0
